# NeuroRelay

./: .gitignore  README.MD  README.md  curry_tcp_to_lsl.py  demo_phase4.py  pyproject.toml  pyproject.toml.bak  test_phase4.py
bridges/curry_matlab/: curry_netstream_to_lsl_client.m  curry_netstream_to_lsl_server.m  loopback_lsl_demo.m
config/: default.json
docs/: PHASE3_FIXES.md  PHASE3_OPERATOR_GUIDE.md  PHASE3_SUMMARY.md  README.md
examples/: demo_phase3_integration.py  qt_live_example.py  test_lsl_simple.py  test_phase2.sh
src/neurorelay/: __init__.py  __main__.py
src/neurorelay/agent/: __init__.py  run_agent.py  tools_local.py
src/neurorelay/bridge/: __init__.py  qt_live_bridge.py
src/neurorelay/bus/: __init__.py  brainbus.py
src/neurorelay/scripts/: __init__.py  edf_to_lsl.py  stream_demo.py  synthetic_ssvep.py
src/neurorelay/signal/: __init__.py  ssvep_detector.py
src/neurorelay/stream/: __init__.py  lsl_source.py  source_replay.py
src/neurorelay/ui/: __init__.py  ssvep_4buttons.py
tests/: test_channel_selection.py  test_phase1_imports.py  test_phase3_imports.py  test_replay_chunks.py  test_smoke.py  test_ssvep.py  test_synth_csv.py
workspace/in/: neurorelay_accessibility_demo_brief.md  sample_report.md
